made sky prettier, made sun and planet prettier

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -2,7 +2,7 @@
 GameName=Solar_Scale
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap.ThirdPersonExampleMap
+EditorStartupMap=/Game/Misc/Maps/Solar_Map.Solar_Map
 GameDefaultMap=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
 TransitionMap=
 bUseSplitscreen=True
@@ -76,5 +76,4 @@ SyncSceneSmoothingFactor=0.000000
 InitialAverageFrameRate=0.016667
 PhysXTreeRebuildRate=10
 DefaultBroadphaseSettings=(bUseMBPOnClient=False,bUseMBPOnServer=False,MBPBounds=(Min=(X=0.000000,Y=0.000000,Z=0.000000),Max=(X=0.000000,Y=0.000000,Z=0.000000),IsValid=0),MBPNumSubdivs=2)
-
 
